# sistema-automatizacion-ia-hotel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/agent/: analyzer.py  prompts.py  reasoning_logger.py  tools.py
app/api/: routes.py
app/core/: config.py  embeddings.py  llm.py  logging.py
app/db/: base.py  models.py  repositories.py  seed.py
app/pipeline/: review_pipeline.py
app/rag/: retriever.py  vector_store.py
app/schemas/: review.py
app/services/: email.py  notifications.py
app/templates/: form.html  result.html
data/policies/: 01_habitaciones_limpieza.md  02_instalaciones_servicios.md  03_atencion_cliente.md  04_alimentos_bebidas.md  05_compensaciones.md
docker/: init.sql
scripts/: ingest_policies.py  seed_db.py
tests/: test_unit.py
workflow/: README.md  n8n_nivel1.json  n8n_nivel2.json
