[project]
name = "sistema-automatizacion-ia-hotel"
version = "2.0.0"
description = "Automatización de gestión de reseñas de huéspedes con LangChain (Nivel 2)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # la longitud de línea la maneja el formateador

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
